# obsink

./: .gitignore  Cargo.toml  progress.md  spec.md
.github/workflows/: ci.yml  deploy-worker.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: api_client.rs  crypto.rs  hasher.rs  lib.rs  manifest.rs  sync_engine.rs  types.rs
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: deploy.md
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: render-worker-config.sh
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml  wrangler.toml.example
worker/src/: index.ts
worker/test/: index.test.ts
