[package]
name = "obsink"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
hex = "0.4"
obsink-core = { path = "../core" }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
