[package]
name = "obsink-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
walkdir = "2"
urlencoding = "2"

[dev-dependencies]
filetime = "0.2"
httpmock = "0.7"
tempfile = "3"
